fix css background color: (replaced the white with purple to increase visibility

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(-45deg, #ff0000, #e30000, #000000, #2a9beb, #ffffff);
+    background: linear-gradient(-45deg, #ff0000, #e30000, #000000, #2a9beb, #c40077);
     background-size: 200vh 100%;
     animation: gradient 20s ease infinite;
     margin: 0 5% 0 5%;
